--- a/lab01/steinmetz-bio.html
+++ b/lab01/steinmetz-bio.html
@@ -5,6 +5,6 @@
     <title>Nick Steinmetz - Bio</title>
 </head>
 <body>
-    Hi, I’m Nick Steinmetz, an Inofrmation Management and Technology major at Syracuse University.  I am in the class of 2024 and plan to concentrate in web design and data analytics.  This summer I did an internship with a startup in Cape Town South Africa, Data Prophet, working with python to help them with data clusters.  Besides work, however, photography is one of my main hobbies.  I have been inspired by my dad who is a photographer himself and he has helped me start my own little drone photography business photographing houses with a drone for reality.  Other than that I like to have fun with friends and family by watching movies or playing games.
+    Hi, I'm Nick Steinmetz, an Inofrmation Management and Technology major at Syracuse University.  I am in the class of 2024 and plan to concentrate in web design and data analytics.  This summer I did an internship with a startup in Cape Town South Africa, Data Prophet, working with python to help them with data clusters.  Besides work, however, photography is one of my main hobbies.  I have been inspired by my dad who is a photographer himself and he has helped me start my own little drone photography business photographing houses with a drone for reality.  Other than that I like to have fun with friends and family by watching movies or playing games.
 </body>
 </html>
